<resources>
    <string name="app_name">Acordes para Piano</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="inversiones">Inversiones</string>
    <string name="circulos_armonicos">Circulos Armónicos</string>
    <string name="no_poder_cargar">No se pudo cargar</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_config">Configuraciones</string>
    <string name="menu_info">Información</string>
    <string name="seleccionacorde">Seleccione el acorde</string>
    <string name="posicion">Posición</string>
    <string name="seleccionescala">Seleccione la escala</string>
    <string name="escalas">Escalas</string>
    <string name="acordes">Acordes</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="info">Información</string>
    <string name="version">Versión</string>
    <string name="desarrollador">Desarrollador</string>
    <string name="si_te_gustado">Si te ha gustado esta aplicación puedes calificarnos con cinco estrellas en Play Store</string>
    <string name="calificar_play_tore">Calificar en Play Store</string>
    <string name="si_tienes_alguna">Si tienes algún inconveniente o sugerencia de esta app, puedes escribirnos a través del correo electronico</string>
    <string name="enviar_mensaje">Enviar mensaje</string>
    <string name="enviar_email">Enviar correo</string>
    <string name="no_clientes">No hay cliente de correo instalado</string>
    <string name="escuchar">Escuchar</string>
    <string name="circulosarmonicos">Círculos armónicos</string>
    <string name="menores">Menores</string>
    <string name="mayores">Mayores</string>
    <string name="circulosmayores">Círculos mayores</string>
    <string name="circulosmenores">Círculos menores</string>
    <string name="desactivanocturno">Desactivar modo nocturno</string>
    <string name="activanocturno">Activar modo nocturno</string>
    <string name="desactivahorizontal">Desactivar pantalla horizontal</string>
    <string name="activahorizontal">Activar pantalla horizontal</string>
    <string name="noactivapantalla">No mantener pantalla activa</string>
    <string name="pantallaactiva">Mantener pantalla activa</string>

    <string-array name="notas">
        <item>C (DO)</item>
        <item>D (RE)</item>
        <item>E (MI)</item>
        <item>F (FA)</item>
        <item>G (SOL)</item>
        <item>A (LA)</item>
        <item>B (SI)</item>
    </string-array>

    <string-array name="posiciones">
        <item>PF</item>
        <item>1P</item>
        <item>2P</item>
    </string-array>

</resources>