<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicioFragment"
            android:icon="@drawable/ic_menu_inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/configuracionesFragment"
            android:icon="@drawable/ic_menu_config"
            android:title="@string/menu_config" />
        <item
            android:id="@+id/infoFragment"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/quitarPublicidadFragment"
            android:icon="@drawable/ic_cancel"
            android:title="@string/menu_quitar_publicidad" />
    </group>
</menu>