<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.InfoFragment"
    android:background="@color/colorFondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <io.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:elevation="4dp"
            app:shape_arc_height="20dp"
            app:shape_arc_position="bottom"
            >
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/side_nav_bar"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/app_name"
                    android:fontFamily="@font/fuente"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="14dp"
                    android:fontFamily="@font/fuente"
                    android:gravity="center_horizontal"
                    android:textColor="#fff"
                    android:id="@+id/txtversion"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_logo150x150"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

        </io.github.florent37.shapeofview.shapes.ArcView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desarrollador"
                android:textSize="16dp"
                android:fontFamily="@font/fuente"
                android:gravity="center_horizontal"
                android:textColor="@color/colorTexto"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Norbey Collazos Ramirez \n ncrcollazos@gmail.com"
                android:textSize="14dp"
                android:fontFamily="@font/fuente"
                android:gravity="center_horizontal"
                android:textColor="@color/colorTexto"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/si_te_gustado"
                android:textColor="@color/colorTexto"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/fuente"/>

            <RatingBar
                android:id="@+id/rbcalificacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:numStars="5"
                android:rating="5"
                android:stepSize="0.1"
                android:layout_gravity="center_horizontal"/>


            <androidx.cardview.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                android:clickable="true"
                app:cardBackgroundColor="?colorPrimary"
                android:foreground="?android:attr/selectableItemBackground">
                <Button
                    android:id="@+id/btncalificarplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calificar_play_tore"
                    android:background="?colorPrimary"
                    android:textColor="#fff"
                    android:fontFamily="@font/fuente"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/si_tienes_alguna"
                android:textColor="@color/colorTexto"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/fuente"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ncrcollazos@gmail.com"
                android:textColor="@color/colorTexto"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/fuente"/>

            <androidx.cardview.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                android:clickable="true"
                app:cardBackgroundColor="?colorPrimary"
                android:foreground="?android:attr/selectableItemBackground">
                <Button
                    android:id="@+id/btnenviarmensaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enviar_mensaje"
                    android:background="?colorPrimary"
                    android:textColor="#fff"
                    android:fontFamily="@font/fuente"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>