<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.acordes.AcordesFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvacorde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"/>

    <WebView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/webview"
        android:layout_below="@+id/posiciones_spinner"
        android:layout_marginTop="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seleccionacorde"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/webview"
                android:scrollbars="horizontal"
                android:layout_weight="1"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posicion"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>

            <Spinner
                android:id="@+id/posiciones_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnescuchar"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:contentPadding="8dp"
                android:foreground="?android:attr/selectableItemBackground">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/escuchar"
                    android:textColor="#fff"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>



    </LinearLayout>





</LinearLayout>