<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.inicio.InicioFragment"
    android:background="@drawable/fondovertical">

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fuente"
            android:gravity="center"
            android:text="Acordes para Piano"
            android:textColor="@color/design_default_color_background"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fuente"
                android:text="@string/acordes"
                android:textColor="@color/design_default_color_background"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_teclado" />
        </LinearLayout>


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fuente"
                android:text="@string/inversiones"
                android:textColor="@color/design_default_color_background"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_teclado" />
        </LinearLayout>


        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fuente"
                android:text="@string/escalas"
                android:textColor="@color/design_default_color_background"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_teclado" />
        </LinearLayout>


        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fuente"
                android:text="@string/circulos_armonicos"
                android:textColor="@color/design_default_color_background"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_teclado" />
        </LinearLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF" />


    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">


        <io.github.florent37.shapeofview.shapes.CircleView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:elevation="4dp"
            app:shape_circle_borderColor="@color/colorAccent"
            app:shape_circle_borderWidth="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/btn_acordes">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9C000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acordes"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/fuente"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_teclado"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>



        </io.github.florent37.shapeofview.shapes.CircleView>

        <!--<io.github.florent37.shapeofview.shapes.CircleView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="0dp"
            android:elevation="4dp"
            app:shape_circle_borderColor="@color/colorAccent"
            app:shape_circle_borderWidth="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9C000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inversiones"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/fuente"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_teclado"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

        </io.github.florent37.shapeofview.shapes.CircleView>-->

        <io.github.florent37.shapeofview.shapes.CircleView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:elevation="4dp"
            app:shape_circle_borderColor="@color/colorAccent"
            app:shape_circle_borderWidth="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/btn_escalas">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9C000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/escalas"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/fuente"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_teclado"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

        </io.github.florent37.shapeofview.shapes.CircleView>

        <io.github.florent37.shapeofview.shapes.CircleView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:elevation="4dp"
            app:shape_circle_borderColor="@color/colorAccent"
            app:shape_circle_borderWidth="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/btn_circulosarmonicos">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9C000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/circulos_armonicos"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/fuente"
                    android:gravity="center_horizontal"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_teclado"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

        </io.github.florent37.shapeofview.shapes.CircleView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>